# swamizone

./: README.md  Resume.html  app.py  pyproject.toml  requirements.txt  vercel.json
static/: main.css  noscript.css
templates/: Resume.html  education.html  experience.html  index.html  tableau.html
